--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,4 +11,7 @@
 // Bulma Vue Modules
 @import 'node_modules/buefy/src/scss/buefy';
 
-
+// Custom SaSS pages
+@import 'overrides';
+@import 'helpers';
+@import 'styles';
