--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17187,6 +17187,8 @@ label.panel-block:hover {
   background: rgba(255, 56, 96, 0.05);
 }
 
+/* navbar */
+
 .has-dropdown .navbar-dropdown {
   box-shadow: 0 0 1px rgba(57, 70, 78, 0.15), 0 20px 55px -8px rgba(57, 70, 78, 0.25);
   left: auto;
@@ -17199,6 +17201,16 @@ label.panel-block:hover {
 
 .navbar-item img {
   max-height: 2.8rem;
+}
+
+/* login / register */
+
+.is-muted {
+  color: #b5b5b5;
+}
+
+.is-muted:hover {
+  color: #7a7a7a;
 }
 
 .m-t-5 {
