--- a/resources/sass/overrides.scss
+++ b/resources/sass/overrides.scss
@@ -1,3 +1,4 @@
+/* navbar */
 .has-dropdown{
 
     .navbar-dropdown{
@@ -14,4 +15,14 @@
 
 .navbar-item img {
     max-height: 2.8rem;
+}
+
+/* login / register */
+
+.is-muted{
+  color: $grey-light;
+}
+
+.is-muted:hover{
+    color: $grey;
 }
